--- a/sme/index.html
+++ b/sme/index.html
@@ -11,17 +11,17 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-    <link rel="stylesheet" href="./assets/css/professionals.css" />
+    <link rel="stylesheet" href="../assets/css/sme.css" />
   </head>
   <body>
       <header class="pro-header">
           <nav class="navbar navbar-expand-sm bg-transparent">
               <ul class="nav w-75 mx-auto d-flex justify-content-around navbar-nav">
                   <li class="nav-item active">
-                      <a class="nav-link" href="/sme/">FOR SMEs<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="#">FOR SMEs<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#signup">ABOUT</a>
+                      <a class="nav-link" href="#">ABOUT</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">FIND GIGS</a>
@@ -32,11 +32,25 @@
               </ul>
           </nav>
           <div class="container-fluid hero-container">
-              <div class="col-6 h-100 d-flex flex-column justify-content-center align-items-baseline pr-5 offset-2">
+            <div class="background-text">
+                <span class="drop-option">Web Developer</span>
+                <span class="drop-option">Programmer</span>
+                <span class="drop-option">Accounting</span>
+                <span class="drop-option">Recruitment</span>
+                <span class="drop-option">Illustration</span>
+                <span class="drop-option">Graphic Design</span>
+                <span class="drop-option">Legal</span>
+                <span class="drop-option">Social Media Management</span>
+                <span class="drop-option">Project Management</span>
+                <span class="drop-option">Research</span>
+                <span class="drop-option">Data Analysis</span>
+                <span class="drop-option"> Other</span>
+            </div>
+              <div class="col-6 h-100 offset-2">
                   <h1 class="hero-title">
                     Make extra income in <span>2021</span> by doing what you do already
                   </h1>
-                  <a href="#signup" class="cta-btn btn orange-btn">Sign Up</a>
+                  <a href="#" class="cta-btn btn orange-btn">Sign Up</a>
 
               </div>
 
@@ -71,12 +85,6 @@
                             <option class="drop-option">Recruitment</option>
                             <option class="drop-option">Illustration</option>
                             <option class="drop-option">Graphic Design</option>
-                            <option class="drop-option">Legal</option>
-                            <option class="drop-option">Social Media Management</option>
-                            <option class="drop-option">Project Management</option>
-                            <option class="drop-option">Research</option>
-                            <option class="drop-option">Data Analysis</option>
-                            <option class="drop-option"> Other</option>
                         </select>
                     </div>
                       
@@ -101,6 +109,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 </html>
