implement base styles for sme  page

--- a/sme/index.html
+++ b/sme/index.html
@@ -14,11 +14,11 @@
     <link rel="stylesheet" href="../assets/css/sme.css" />
   </head>
   <body>
-      <header class="pro-header">
+      <header class="sme-header">
           <nav class="navbar navbar-expand-sm bg-transparent">
               <ul class="nav w-75 mx-auto d-flex justify-content-around navbar-nav">
                   <li class="nav-item active">
-                      <a class="nav-link" href="#">FOR SMEs<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="#">FOR PROFESSIONALS<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="#">ABOUT</a>
@@ -33,23 +33,22 @@
           </nav>
           <div class="container-fluid hero-container">
             <div class="background-text">
-                <span class="drop-option">Web Developer</span>
-                <span class="drop-option">Programmer</span>
-                <span class="drop-option">Accounting</span>
-                <span class="drop-option">Recruitment</span>
-                <span class="drop-option">Illustration</span>
-                <span class="drop-option">Graphic Design</span>
-                <span class="drop-option">Legal</span>
-                <span class="drop-option">Social Media Management</span>
-                <span class="drop-option">Project Management</span>
-                <span class="drop-option">Research</span>
-                <span class="drop-option">Data Analysis</span>
-                <span class="drop-option"> Other</span>
+                <span class="text-span">Accounting</span>
+                <span class="text-span">Recruitment</span>
+                <span class="text-span">Programming</span>
+                <span class="text-span">Data Collection</span>
+                <span class="text-span">Social Media Management</span>
+                <span class="text-span">Illustration</span>
+                <span class="text-span">Graphic Design</span>
+                <span class="text-span">Project Management</span>
+                <span class="text-span">Research</span>
+                <span class="text-span">Legal</span>
             </div>
-              <div class="col-6 h-100 offset-2">
+              <div class="col-8 pr-5 h-100 d-flex flex-column justify-content-center align-items-baseline offset-2">
                   <h1 class="hero-title">
-                    Make extra income in <span>2021</span> by doing what you do already
+                    Find exceptional part&#8209;time talents to help grow your business
                   </h1>
+                  <h6 class="big-text mt-4">Create an amazing team with experienced professionals without employing them fulll time.</h6>
                   <a href="#" class="cta-btn btn orange-btn">Sign Up</a>
 
               </div>
@@ -59,25 +58,29 @@
       <main>
           <section  class="signup d-flex justify-content-between" id="signup">
               <div class="form-block">
-                  <form class="" id="proSignupForm">
+                  <form class="" id="smeSignupForm">
                     <div class="form-group">
-                        <label for="proName">Name</label>
+                        <label for="proName">Company Name</label>
                         <input type="text" class="form-control" id="proName" placeholder="">
                       </div>
                       <div class="form-group">
-                        <label for="proLinkedIn">LinkedIn Profile</label>
+                        <label for="proLinkedIn">Company URL (LinkedIn, Instagram or Company website)</label>
+                        <input type="url" class="form-control" id="proLinkedIn" placeholder="">
+                      </div>
+                      <div class="form-group">
+                        <label for="proLinkedIn">Contact Name</label>
                         <input type="url" class="form-control" id="proLinkedIn" placeholder="">
                       </div>
                     <div class="form-group">
-                        <label for="proEmail">Email address</label>
+                        <label for="proEmail">Contact Email address</label>
                         <input type="email" class="form-control" id="proEmail" placeholder="">
                     </div>
                     <div class="form-group">
-                        <label for="proPhone">Phone Number</label>
+                        <label for="proPhone">Contact Phone Number</label>
                         <input type="tel" class="form-control" id="proPhone" placeholder="">
                     </div>
                     <div class="form-group">
-                        <label for="proSkill">Skill Set</label>
+                        <label for="proSkill">Services required (Choose multiple options)</label>
                         <select class="selectpicker form-control" title="&nbsp;">
                             <option class="drop-option">Web Developer</option>
                             <option class="drop-option">Programmer</option>
@@ -85,16 +88,22 @@
                             <option class="drop-option">Recruitment</option>
                             <option class="drop-option">Illustration</option>
                             <option class="drop-option">Graphic Design</option>
+                            <option class="drop-option">Legal</option>
+                            <option class="drop-option">Social Media Management</option>
+                            <option class="drop-option">Project Management</option>
+                            <option class="drop-option">Research</option>
+                            <option class="drop-option">Data Analysis</option>
+                            <option class="drop-option"> Other</option>
                         </select>
                     </div>
                       
-                    <button type="submit" class="btn submit-btn orange-btn">Sign up</button>
+                    <button type="submit" class="btn submit-btn blue-btn">Sign up</button>
                   </form>
 
               </div>
               <div class="info-block d-flex flex-column justify-content-center">
-                  <h1 class="signup-title">No new skills needed</h1>
-                  <h6 class="big-text">No need to learn anything new, simply register and start making extra income today.</h6>
+                  <h1 class="signup-title">No long term engagements needed</h1>
+                  <h6 class="big-text">Find talented professionals to help your business grow without having to employ longterm.</h6>
 
               </div>
 
