--- a/sme/index.html
+++ b/sme/index.html
@@ -10,7 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,500;0,700;0,800;1,400&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+    <!-- Bootstrap Multiselect CSS -->
+    <link href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/css/bootstrap-multiselect.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/sme.css" />
   </head>
   <body>
@@ -81,7 +82,7 @@
                     </div>
                     <div class="form-group">
                         <label for="proSkill">Services required (Choose multiple options)</label>
-                        <select class="selectpicker form-control" title="&nbsp;">
+                        <select id="servicesSelect" multiple="multiple">
                             <option class="drop-option">Web Developer</option>
                             <option class="drop-option">Programmer</option>
                             <option class="drop-option">Accounting</option>
@@ -93,10 +94,11 @@
                             <option class="drop-option">Project Management</option>
                             <option class="drop-option">Research</option>
                             <option class="drop-option">Data Analysis</option>
-                            <option class="drop-option"> Other</option>
-                        </select>
+                            <option class="drop-option">Other</option>
+                            <option class="drop-option" value="">&nbsp;</option>
+                    </select>
                     </div>
-                      
+                   
                     <button type="submit" class="btn submit-btn blue-btn">Sign up</button>
                   </form>
 
@@ -117,7 +119,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+     <!-- Bootstrap Multiselect JavaScript -->
+     <script type="text/javascript" src=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.js"></script>
     <script src="../assets/js/script.js"></script>
 </body>
 </html>
