add drop-option hover styles

--- a/sme/index.html
+++ b/sme/index.html
@@ -19,7 +19,7 @@
           <nav class="navbar navbar-expand-sm bg-transparent">
               <ul class="nav w-75 mx-auto d-flex justify-content-around navbar-nav">
                   <li class="nav-item active">
-                      <a class="nav-link" href="#">FOR PROFESSIONALS<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="../">FOR PROFESSIONALS<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="#">ABOUT</a>
@@ -50,7 +50,7 @@
                     Find exceptional part&#8209;time talents to help grow your business
                   </h1>
                   <h6 class="big-text mt-4">Create an amazing team with experienced professionals without employing them fulll time.</h6>
-                  <a href="#" class="cta-btn btn orange-btn">Sign Up</a>
+                  <a href="#signup" class="cta-btn btn orange-btn">Sign Up</a>
 
               </div>
 
