--- a/index.html
+++ b/index.html
@@ -45,26 +45,30 @@
       <main>
           <section  class="signup d-flex justify-content-between" id="signup">
               <div class="form-block">
-                  <form class="" id="proSignupForm">
+                  <form class="signup-form" novalidate id="proSignupForm">
                     <div class="form-group">
                         <label for="proName">Name</label>
-                        <input type="text" class="form-control" id="proName" placeholder="">
+                        <input type="text" class="form-control" required id="proName" placeholder="">
+                        <div class="invalid-feedback">Please select your state</div>
                       </div>
                       <div class="form-group">
                         <label for="proLinkedIn">LinkedIn Profile</label>
-                        <input type="url" class="form-control" id="proLinkedIn" placeholder="">
+                        <input type="url" class="form-control" required id="proLinkedIn" placeholder="">
+                        <div class="invalid-feedback">Please enter your LinkedIn profile url</div>
                       </div>
                     <div class="form-group">
                         <label for="proEmail">Email address</label>
-                        <input type="email" class="form-control" id="proEmail" placeholder="">
+                        <input type="email" class="form-control" required id="proEmail" placeholder="">
+                        <div class="invalid-feedback">Please enter your email address</div>
                     </div>
                     <div class="form-group">
                         <label for="proPhone">Phone Number</label>
                         <input type="tel" class="form-control" id="proPhone" placeholder="">
                     </div>
                     <div class="form-group">
-                        <label for="proSkill">Skill Set</label>
-                        <select class="selectpicker form-control" title="&nbsp;">
+                        <label class="" for="proSkill">Skill Set</label>
+                        <select class="selectpicker form-control" required title="&nbsp;" id="proSkill" >
+                            <option class="drop-option d-none"></option>
                             <option class="drop-option">Web Developer</option>
                             <option class="drop-option">Programmer</option>
                             <option class="drop-option">Accounting</option>
@@ -78,6 +82,7 @@
                             <option class="drop-option">Data Analysis</option>
                             <option class="drop-option"> Other</option>
                         </select>
+                        <div class="invalid-feedback skill-feedback">Please select a skill</div>
                     </div>
                       
                     <button type="submit" class="btn submit-btn orange-btn">Sign up</button>
@@ -97,10 +102,10 @@
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
