--- a/sme/index.html
+++ b/sme/index.html
@@ -59,7 +59,7 @@
       <main>
           <section  class="signup d-flex justify-content-between" id="signup">
               <div class="form-block">
-                  <form class="" id="smeSignupForm">
+                  <form class="signup-form" id="smeSignupForm">
                     <div class="form-group">
                         <label for="proName">Company Name</label>
                         <input type="text" class="form-control" id="proName" placeholder="">
@@ -116,11 +116,21 @@
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
      <!-- Bootstrap Multiselect JavaScript -->
      <script type="text/javascript" src=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.js"></script>
     <script src="../assets/js/script.js"></script>
+    <script>
+          $(document).ready(function() {
+        $('#servicesSelect').multiselect({
+
+            buttonClass: 'sort-button form-control',
+            buttonWidth: '100p%',
+            nonSelectedText: "\00",
+        });
+    });
+    </script>
 </body>
 </html>
