implement form submission for sme form

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="form-group">
                         <label for="proName">Name</label>
                         <input type="text" class="form-control" required id="proName" placeholder="">
-                        <div class="invalid-feedback">Please select your state</div>
+                        <div class="invalid-feedback">Please enter your name</div>
                       </div>
                       <div class="form-group">
                         <label for="proLinkedIn">LinkedIn Profile</label>
