implement mobile ui for professionals page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
       <header class="pro-header">
-          <nav class="navbar navbar-expand-sm bg-transparent">
+          <nav class="navbar navbar-expand bg-transparent">
               <ul class="nav w-75 mx-auto d-flex justify-content-around navbar-nav">
                   <li class="nav-item active">
                       <a class="nav-link" href="/sme/">FOR SMEs<span class="sr-only">(current)</span></a>
@@ -23,16 +23,16 @@
                   <li class="nav-item">
                       <a class="nav-link" href="#signup">ABOUT</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item d-none d-md-block">
                     <a class="nav-link" href="#">FIND GIGS</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item d-none  d-md-block">
                     <a class="nav-link" href="#">REFER A FRIEND</a>
                 </li>
               </ul>
           </nav>
           <div class="container-fluid hero-container">
-              <div class="col-6 h-100 d-flex flex-column justify-content-center align-items-baseline pr-5 offset-2">
+              <div class=" mx-auto mx-md col-10 col-md-8 col-lg-6 offset-md-2 h-100 d-flex flex-column justify-content-center align-items-baseline pr-md-5">
                   <h1 class="hero-title">
                     Make extra income in <span>2021</span> by doing what you do already
                   </h1>
@@ -43,7 +43,7 @@
           </div>
       </header>
       <main>
-          <section  class="signup d-flex justify-content-between" id="signup">
+          <section  class="signup d-flex flex-column-reverse flex-md-row justify-content-between" id="signup">
               <div class="form-block">
                   <form class="signup-form" novalidate id="proSignupForm">
                     <div class="form-group">
