--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
       <header class="pro-header">
           <nav class="navbar navbar-expand bg-transparent">
-              <ul class="nav w-75 mx-auto d-flex justify-content-around navbar-nav">
+              <ul class="nav col-sm-9 col-12 mx-auto d-flex justify-content-around navbar-nav">
                   <li class="nav-item active">
                       <a class="nav-link" href="/sme/">FOR SMEs<span class="sr-only">(current)</span></a>
                   </li>
