--- a/sme/index.html
+++ b/sme/index.html
@@ -16,18 +16,18 @@
   </head>
   <body>
       <header class="sme-header">
-          <nav class="navbar navbar-expand-sm bg-transparent">
-              <ul class="nav w-75 mx-auto d-flex justify-content-around navbar-nav">
+          <nav class="navbar navbar-expand bg-transparent">
+              <ul class="nav col-sm-9 col-12 mx-auto d-flex justify-content-around navbar-nav">
                   <li class="nav-item active">
                       <a class="nav-link" href="../">FOR PROFESSIONALS<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="#">ABOUT</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item d-none d-md-block">
                     <a class="nav-link" href="#">FIND GIGS</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item d-none d-md-block">
                     <a class="nav-link" href="#">REFER A FRIEND</a>
                 </li>
               </ul>
@@ -45,7 +45,7 @@
                 <span class="text-span">Research</span>
                 <span class="text-span">Legal</span>
             </div>
-              <div class="col-8 pr-5 h-100 d-flex flex-column justify-content-center align-items-baseline offset-2">
+              <div class="mx-auto px-1 px-sm-3 mx-md col-12 col-md-8 col-lg-6 offset-md-2 pr-md-5 h-100 d-flex flex-column justify-content-center align-items-baseline ">
                   <h1 class="hero-title">
                     Find exceptional part&#8209;time talents to help grow your business
                   </h1>
@@ -57,7 +57,7 @@
           </div>
       </header>
       <main>
-          <section  class="signup d-flex justify-content-between" id="signup">
+          <section  class="signup d-flex flex-column-reverse flex-md-row justify-content-between" id="signup">
               <div class="form-block">
                   <form class="signup-form" novalidate id="smeSignupForm">
                     <div class="form-group">
