--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </ul>
           </nav>
           <div class="container-fluid hero-container">
-              <div class=" mx-auto mx-md col-10 col-md-8 col-lg-6 offset-md-2 h-100 d-flex flex-column justify-content-center align-items-baseline pr-md-5">
+              <div class="offset-md-2 offset-0 offset-sm-1 mr-auto  col-10 col-md-8 col-lg-6  h-100 d-flex flex-column justify-content-center align-items-baseline pr-md-5">
                   <h1 class="hero-title">
                     Make extra income in <span>2021</span> by doing what you do already
                   </h1>
