--- a/sme/index.html
+++ b/sme/index.html
@@ -45,7 +45,7 @@
                 <span class="text-span">Research</span>
                 <span class="text-span">Legal</span>
             </div>
-              <div class="mx-auto px-1 px-sm-3 mx-md col-12 col-md-8 col-lg-6 offset-md-2 pr-md-5 h-100 d-flex flex-column justify-content-center align-items-baseline ">
+              <div class="offset-md-2 offset-0 offset-sm-1 mr-auto px-1 px-sm mx-md col-12 col-sm-10  col-md-8 col-xl-8  pr-md-5 h-100 d-flex flex-column justify-content-center align-items-baseline ">
                   <h1 class="hero-title">
                     Find exceptional part&#8209;time talents to help grow your business
                   </h1>
