--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="./assets/css/professionals.css" />
   </head>
   <body>
@@ -33,7 +34,7 @@
           </nav>
           <div class="container-fluid hero-container">
               <div class="offset-md-2 offset-0 offset-sm-1 mr-auto  col-10 col-md-8 col-lg-6  h-100 d-flex flex-column justify-content-center align-items-baseline pr-md-5">
-                  <h1 class="hero-title">
+                  <h1 class="hero-title wow slideInLeft">
                     Make extra income in <span>2021</span> by doing what you do already
                   </h1>
                   <a href="#signup" class="cta-btn btn orange-btn">Sign Up</a>
@@ -106,6 +107,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
