implement initial aos

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           </nav>
           <div class="container-fluid hero-container">
               <div class="offset-md-2 offset-0 offset-sm-1 mr-auto  col-10 col-md-8 col-lg-6  h-100 d-flex flex-column justify-content-center align-items-baseline pr-md-5">
-                  <h1 class="hero-title wow slideInLeft">
+                  <h1 class="hero-title" data-aos="fade-right" data-aos-duration="1500">
                     Make extra income in <span>2021</span> by doing what you do already
                   </h1>
-                  <a href="#signup" class="cta-btn btn orange-btn">Sign Up</a>
+                  <a href="#signup" class="cta-btn btn orange-btn" data-aos="fade-right" data-aos-duration="1500"  data-aos-delay="500">Sign Up</a>
 
               </div>
 
@@ -47,26 +47,26 @@
           <section  class="signup d-flex flex-column-reverse flex-md-row justify-content-between" id="signup">
               <div class="form-block">
                   <form class="signup-form" novalidate id="proSignupForm">
-                    <div class="form-group">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="1000">
                         <label for="proName">Name</label>
                         <input type="text" class="form-control" required id="proName" placeholder="">
                         <div class="invalid-feedback">Please enter your name</div>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="250">
                         <label for="proLinkedIn">LinkedIn Profile</label>
                         <input type="url" class="form-control" required id="proLinkedIn" placeholder="">
                         <div class="invalid-feedback">Please enter your LinkedIn profile url</div>
                       </div>
-                    <div class="form-group">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500">
                         <label for="proEmail">Email address</label>
                         <input type="email" class="form-control" required id="proEmail" placeholder="">
                         <div class="invalid-feedback">Please enter your email address</div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="750">
                         <label for="proPhone">Phone Number</label>
                         <input type="tel" class="form-control" id="proPhone" placeholder="">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1000">
                         <label class="" for="proSkill">Skill Set</label>
                         <select class="selectpicker form-control" required title="&nbsp;" id="proSkill" >
                             <option class="drop-option d-none"></option>
@@ -86,7 +86,7 @@
                         <div class="invalid-feedback skill-feedback">Please select a skill</div>
                     </div>
                       
-                    <button type="submit" class="btn submit-btn orange-btn">Sign up</button>
+                    <button type="submit" class="btn submit-btn orange-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1250">Sign up</button>
                   </form>
 
               </div>
