implement sme animations

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/professionals.css" />
   </head>
@@ -34,10 +35,10 @@
           </nav>
           <div class="container-fluid hero-container">
               <div class="offset-md-2 offset-0 offset-sm-1 mr-auto  col-10 col-md-8 col-lg-6  h-100 d-flex flex-column justify-content-center align-items-baseline pr-md-5">
-                  <h1 class="hero-title" data-aos="fade-right" data-aos-duration="1500">
+                  <h1 class="hero-title" data-aos="fade-right" data-aos-duration="1000">
                     Make extra income in <span>2021</span> by doing what you do already
                   </h1>
-                  <a href="#signup" class="cta-btn btn orange-btn" data-aos="fade-right" data-aos-duration="1500"  data-aos-delay="500">Sign Up</a>
+                  <a href="#signup" class="cta-btn btn orange-btn" data-aos="fade-right" data-aos-duration="1000"  data-aos-delay="300">Sign Up</a>
 
               </div>
 
@@ -47,26 +48,26 @@
           <section  class="signup d-flex flex-column-reverse flex-md-row justify-content-between" id="signup">
               <div class="form-block">
                   <form class="signup-form" novalidate id="proSignupForm">
-                    <div class="form-group" data-aos="fade-right" data-aos-duration="1000">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="600">
                         <label for="proName">Name</label>
                         <input type="text" class="form-control" required id="proName" placeholder="">
                         <div class="invalid-feedback">Please enter your name</div>
                       </div>
-                      <div class="form-group" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="250">
+                      <div class="form-group" data-aos="fade-right" data-aos-duration="600" data-aos-delay="150">
                         <label for="proLinkedIn">LinkedIn Profile</label>
                         <input type="url" class="form-control" required id="proLinkedIn" placeholder="">
                         <div class="invalid-feedback">Please enter your LinkedIn profile url</div>
                       </div>
-                    <div class="form-group" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="600" data-aos-delay="300">
                         <label for="proEmail">Email address</label>
                         <input type="email" class="form-control" required id="proEmail" placeholder="">
                         <div class="invalid-feedback">Please enter your email address</div>
                     </div>
-                    <div class="form-group" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="750">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="600" data-aos-delay="450">
                         <label for="proPhone">Phone Number</label>
                         <input type="tel" class="form-control" id="proPhone" placeholder="">
                     </div>
-                    <div class="form-group" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="1000">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="600" data-aos-delay="600">
                         <label class="" for="proSkill">Skill Set</label>
                         <select class="selectpicker form-control" required title="&nbsp;" id="proSkill" >
                             <option class="drop-option d-none"></option>
@@ -86,13 +87,13 @@
                         <div class="invalid-feedback skill-feedback">Please select a skill</div>
                     </div>
                       
-                    <button type="submit" class="btn submit-btn orange-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1250">Sign up</button>
+                    <button type="submit" class="btn submit-btn orange-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="850">Sign up</button>
                   </form>
 
               </div>
               <div class="info-block d-flex flex-column justify-content-center">
-                  <h1 class="signup-title">No new skills needed</h1>
-                  <h6 class="big-text">No need to learn anything new, simply register and start making extra income today.</h6>
+                  <h1 class="signup-title"  data-aos="fade-left" data-aos-duration="600" data-aos-delay="300">No new skills needed</h1>
+                  <h6 class="big-text"  data-aos="fade-left" data-aos-duration="600" data-aos-delay="500">No need to learn anything new, simply register and start making extra income today.</h6>
 
               </div>
 
