--- a/sme/index.html
+++ b/sme/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Bootstrap Multiselect CSS -->
     <link href=" https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/css/bootstrap-multiselect.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/sme.css" />
   </head>
@@ -47,12 +48,11 @@
                 <span class="text-span">Legal</span>
             </div>
               <div class="offset-md-2 offset-0 offset-sm-1 mr-auto px-1 px-sm mx-md col-12 col-sm-10  col-md-8 col-xl-8  pr-md-5 h-100 d-flex flex-column justify-content-center align-items-baseline ">
-                  <h1 class="hero-title">
+                  <h1 class="hero-title"  data-aos="fade-right" data-aos-duration="1000">
                     Find exceptional part&#8209;time talents to help grow your business
                   </h1>
-                  <h6 class="big-text mt-4">Create an amazing team with experienced professionals without employing them fulll time.</h6>
-                  <a href="#signup" class="cta-btn btn orange-btn">Sign Up</a>
-
+                  <h6 class="big-text mt-4"  data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">Create an amazing team with experienced professionals without employing them fulll time.</h6>
+                  <a href="#signup" class="cta-btn btn orange-btn"  data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="500">Sign Up</a>
               </div>
 
           </div>
@@ -61,32 +61,32 @@
           <section  class="signup d-flex flex-column-reverse flex-md-row justify-content-between" id="signup">
               <div class="form-block">
                   <form class="signup-form" novalidate id="smeSignupForm">
-                    <div class="form-group">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="600">
                         <label for="smeCompanyName">Company Name</label>
                         <input type="text" required class="form-control" id="smeCompanyName" placeholder="">
                         <div class="invalid-feedback">Please enter your company's name</div>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group" data-aos="fade-right" data-aos-duration="600" data-aos-delay="150">
                         <label for="smeCompanyLinkedIn">Company URL (LinkedIn, Instagram or Company website)</label>
                         <input type="url" required class="form-control" id="smeCompanyLinkedIn" placeholder="">
                         <div class="invalid-feedback">Please enter your company's LinkedIn url</div>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group" data-aos="fade-right" data-aos-duration="600" data-aos-delay="300">
                         <label for="smeContactName">Contact Name</label>
                         <input type="text" required class="form-control" id="smeContactName" placeholder="">
                         <div class="invalid-feedback">Please enter your name</div>
                       </div>
-                    <div class="form-group">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="600" data-aos-delay="450">
                         <label for="smeContactEmail">Contact Email address</label>
                         <input type="email" required class="form-control" id="smeContactEmail" placeholder="">
                         <div class="invalid-feedback">Please enter your email</div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="600" data-aos-delay="600">
                         <label for="smeContactPhone">Contact Phone Number</label>
                         <input type="tel" minlength="6" class="form-control" id="smeContactPhone" placeholder="">
                         <div class="invalid-feedback">Please enter your phone number</div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" data-aos="fade-right" data-aos-duration="600" data-aos-delay="750">
                         <label for="smeServicesSelect">Services required (Choose multiple options)</label>
                         <select id="smeServicesSelect" required multiple="multiple">
                             <option class="drop-option">Web Developer</option>
@@ -106,14 +106,13 @@
                     <div class="invalid-feedback skill-feedback">Please select a service</div>
                     </div>
                    
-                    <button type="submit" class="btn submit-btn blue-btn">Sign up</button>
+                    <button type="submit" class="btn submit-btn blue-btn" data-aos="fade-up" data-aos-duration="800" data-aos-delay="850">Sign up</button>
                   </form>
 
               </div>
               <div class="info-block d-flex flex-column justify-content-center">
-                  <h1 class="signup-title">No long term engagements needed</h1>
-                  <h6 class="big-text">Find talented professionals to help your business grow without having to employ longterm.</h6>
-
+                  <h1 class="signup-title"  data-aos="fade-left" data-aos-duration="600" data-aos-delay="400">No long term engagements needed</h1>
+                  <h6 class="big-text"  data-aos="fade-left" data-aos-duration="600" data-aos-delay="600">Find talented professionals to help your business grow without having to employ longterm.</h6>
               </div>
 
           </section>
