fix offest of signup button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <h1 class="hero-title" data-aos="fade-right" data-aos-duration="1000">
                     Make extra income in <span>2021</span> by doing what you do already
                   </h1>
-                  <a href="#signup" class="cta-btn btn orange-btn" data-aos="fade-right" data-aos-duration="1000"  data-aos-delay="300">Sign Up</a>
+                  <a href="#signup" class="cta-btn btn orange-btn" data-aos="fade-right"  data-aos-offset="-300" data-aos-duration="1000"  data-aos-delay="300">Sign Up</a>
 
               </div>
 
